--- a/streamlit_checkpoint.ipynb
+++ b/streamlit_checkpoint.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNc384pkSuFl5hPhhc9vzPU",
+      "authorship_tag": "ABX9TyMPSHf2tCcGnqWckpJ9pqfu",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 50,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -93,185 +93,12 @@
         }
       ],
       "source": [
-        "\n",
-        "pip install streamlit==1.13.0\n"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "1. Import the necessary libraries: Streamlit, sklearn.datasets, and sklearn.ensemble."
-      ],
-      "metadata": {
-        "id": "u9NZo1HzwoEG"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
+        "pip install streamlit==1.13.0\n",
         "import pandas as pd\n",
         "import streamlit as st\n",
         "from sklearn import datasets\n",
-        "from sklearn import ensemble\n"
-      ],
-      "metadata": {
-        "id": "bRf8bdpsolpp"
-      },
-      "execution_count": 51,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "2. Load the iris dataset using the \"datasets.load_iris()\" function and assign the data and target variables to \"X\" and \"Y\", respectively."
-      ],
-      "metadata": {
-        "id": "Jwoy3tYNwvpe"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "iris = datasets.load_iris()\n",
-        "# Creating a DataFrame of given iris dataset.\n",
-        "import pandas as pd\n",
-        "data=pd.DataFrame({\n",
-        "    'sepal length':iris.data[:,0],\n",
-        "    'sepal width':iris.data[:,1],\n",
-        "    'petal length':iris.data[:,2],\n",
-        "    'petal width':iris.data[:,3],\n",
-        "    'species':iris.target\n",
-        "})\n",
-        "species = []\n",
-        "for i in range(len(data['species'])):\n",
-        "    if data['species'][i] == 0:\n",
-        "        species.append(\"setosa\")\n",
-        "    elif data['species'][i] == 1:\n",
-        "        species.append('versicolor')\n",
-        "    else:\n",
-        "        species.append('virginica')\n",
-        "data['species'] = species\n",
-        "\n",
-        "data.head()\n",
-        "X=data[['sepal length', 'sepal width', 'petal length', 'petal width']]\n",
-        "y=data['species']\n",
-        "print(data)\n"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "ZVUl_oZVwxwC",
-        "outputId": "59469e1e-4b60-4e90-b99b-23258d004c87"
-      },
-      "execution_count": 52,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "     sepal length  sepal width  petal length  petal width    species\n",
-            "0             5.1          3.5           1.4          0.2     setosa\n",
-            "1             4.9          3.0           1.4          0.2     setosa\n",
-            "2             4.7          3.2           1.3          0.2     setosa\n",
-            "3             4.6          3.1           1.5          0.2     setosa\n",
-            "4             5.0          3.6           1.4          0.2     setosa\n",
-            "..            ...          ...           ...          ...        ...\n",
-            "145           6.7          3.0           5.2          2.3  virginica\n",
-            "146           6.3          2.5           5.0          1.9  virginica\n",
-            "147           6.5          3.0           5.2          2.0  virginica\n",
-            "148           6.2          3.4           5.4          2.3  virginica\n",
-            "149           5.9          3.0           5.1          1.8  virginica\n",
-            "\n",
-            "[150 rows x 5 columns]\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "3. Set up a Random Forest Classifier and fit the model using the \"RandomForestClassifier()\" and \"fit()\" functions."
-      ],
-      "metadata": {
-        "id": "ZvMq2s6VxPpy"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "#Data training\n",
-        "from sklearn.model_selection import train_test_split\n",
-        "from sklearn import metrics\n",
-        "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.3)\n",
-        "#Fit data using Random Forest Model\n",
-        "from sklearn.ensemble import RandomForestClassifier\n",
-        "clf=RandomForestClassifier(n_estimators=100)\n",
-        "clf.fit(X_train,y_train)\n",
-        "y_pred=clf.predict(X_test)\n",
-        "# Confusion matrix\n",
-        "print(metrics.confusion_matrix(y_test, y_pred))\n"
-      ],
-      "metadata": {
-        "id": "rvPo-KIGuHGG",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "91eace6c-e8a4-40c6-b1ee-5aae305ad05e"
-      },
-      "execution_count": 53,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "[[17  0  0]\n",
-            " [ 0 15  0]\n",
-            " [ 0  1 12]]\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "4. Create a Streamlit app using the \"streamlit.title()\" and \"streamlit.header()\" functions to add a title and header to the app.\n",
-        "5. Add input fields for sepal length, sepal width, petal length, and petal width using the \"streamlit.slider()\" function. Use the minimum, maximum, and mean values of each feature as the arguments for the function.\n",
-        "6. Define a prediction button using the \"streamlit.button()\" function that takes in the input values and uses the classifier to predict the type of iris flower\n",
-        "7. Use the \"streamlit.write()\" function to display the predicted type of iris flower on the app.\n"
-      ],
-      "metadata": {
-        "id": "UkJdaT0Tx1RB"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "! pip install pyngrok"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "gzRcY82v68jk",
-        "outputId": "41756e72-6a7a-4032-ec17-263e2bc253b7"
-      },
-      "execution_count": 54,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Looking in indexes: https://pypi.org/simple, https://us-python.pkg.dev/colab-wheels/public/simple/\n",
-            "Requirement already satisfied: pyngrok in /usr/local/lib/python3.9/dist-packages (5.2.1)\n",
-            "Requirement already satisfied: PyYAML in /usr/local/lib/python3.9/dist-packages (from pyngrok) (6.0)\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
+        "from sklearn import ensemble\n",
+        "! pip install pyngrok\n",
         "%%writefile app.py\n",
         "import numpy as np\n",
         "import streamlit as st\n",
@@ -316,101 +143,6 @@
         "if classify:\n",
         "  st.subheader(\"The flower type is:\")\n",
         "  st.write(prediction)"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "xUtT5b5a7rN6",
-        "outputId": "7ed74c2b-0772-4719-8d4f-b80ec0eeed97"
-      },
-      "execution_count": 58,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Overwriting app.py\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "!streamlit run /content/app.py & npx localtunnel --port 8501"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "AqGJOinI5mWW",
-        "outputId": "207c46bb-49a3-45bc-b959-94c55d8571b3"
-      },
-      "execution_count": 59,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "2023-03-23 12:08:44.149 INFO    numexpr.utils: NumExpr defaulting to 2 threads.\n",
-            "\u001b[K\u001b[?25hnpx: installed 22 in 3.497s\n",
-            "your url is: https://silver-bugs-nail-34-125-50-192.loca.lt\n",
-            "\n",
-            "Collecting usage statistics. To deactivate, set browser.gatherUsageStats to False.\n",
-            "\u001b[0m\n",
-            "\u001b[0m\n",
-            "\u001b[34m\u001b[1m  You can now view your Streamlit app in your browser.\u001b[0m\n",
-            "\u001b[0m\n",
-            "\u001b[34m  Network URL: \u001b[0m\u001b[1mhttp://172.28.0.12:8501\u001b[0m\n",
-            "\u001b[34m  External URL: \u001b[0m\u001b[1mhttp://34.125.50.192:8501\u001b[0m\n",
-            "\u001b[0m\n",
-            "/usr/local/lib/python3.9/dist-packages/sklearn/base.py:432: UserWarning: X has feature names, but RandomForestClassifier was fitted without feature names\n",
-            "  warnings.warn(\n",
-            "/usr/local/lib/python3.9/dist-packages/sklearn/base.py:432: UserWarning: X has feature names, but RandomForestClassifier was fitted without feature names\n",
-            "  warnings.warn(\n",
-            "/usr/local/lib/python3.9/dist-packages/sklearn/base.py:432: UserWarning: X has feature names, but RandomForestClassifier was fitted without feature names\n",
-            "  warnings.warn(\n",
-            "/usr/local/lib/python3.9/dist-packages/sklearn/base.py:432: UserWarning: X has feature names, but RandomForestClassifier was fitted without feature names\n",
-            "  warnings.warn(\n",
-            "/usr/local/lib/python3.9/dist-packages/sklearn/base.py:432: UserWarning: X has feature names, but RandomForestClassifier was fitted without feature names\n",
-            "  warnings.warn(\n",
-            "/usr/local/lib/python3.9/dist-packages/sklearn/base.py:432: UserWarning: X has feature names, but RandomForestClassifier was fitted without feature names\n",
-            "  warnings.warn(\n",
-            "/usr/local/lib/python3.9/dist-packages/sklearn/base.py:432: UserWarning: X has feature names, but RandomForestClassifier was fitted without feature names\n",
-            "  warnings.warn(\n",
-            "/usr/local/lib/python3.9/dist-packages/sklearn/base.py:432: UserWarning: X has feature names, but RandomForestClassifier was fitted without feature names\n",
-            "  warnings.warn(\n",
-            "/usr/local/lib/python3.9/dist-packages/sklearn/base.py:432: UserWarning: X has feature names, but RandomForestClassifier was fitted without feature names\n",
-            "  warnings.warn(\n",
-            "/usr/local/lib/python3.9/dist-packages/sklearn/base.py:432: UserWarning: X has feature names, but RandomForestClassifier was fitted without feature names\n",
-            "  warnings.warn(\n",
-            "/usr/local/lib/python3.9/dist-packages/sklearn/base.py:432: UserWarning: X has feature names, but RandomForestClassifier was fitted without feature names\n",
-            "  warnings.warn(\n",
-            "/usr/local/lib/python3.9/dist-packages/sklearn/base.py:432: UserWarning: X has feature names, but RandomForestClassifier was fitted without feature names\n",
-            "  warnings.warn(\n",
-            "/usr/local/lib/python3.9/dist-packages/sklearn/base.py:432: UserWarning: X has feature names, but RandomForestClassifier was fitted without feature names\n",
-            "  warnings.warn(\n",
-            "/usr/local/lib/python3.9/dist-packages/sklearn/base.py:432: UserWarning: X has feature names, but RandomForestClassifier was fitted without feature names\n",
-            "  warnings.warn(\n",
-            "/usr/local/lib/python3.9/dist-packages/sklearn/base.py:432: UserWarning: X has feature names, but RandomForestClassifier was fitted without feature names\n",
-            "  warnings.warn(\n",
-            "/usr/local/lib/python3.9/dist-packages/sklearn/base.py:432: UserWarning: X has feature names, but RandomForestClassifier was fitted without feature names\n",
-            "  warnings.warn(\n",
-            "/usr/local/lib/python3.9/dist-packages/sklearn/base.py:432: UserWarning: X has feature names, but RandomForestClassifier was fitted without feature names\n",
-            "  warnings.warn(\n",
-            "/usr/local/lib/python3.9/dist-packages/sklearn/base.py:432: UserWarning: X has feature names, but RandomForestClassifier was fitted without feature names\n",
-            "  warnings.warn(\n",
-            "/usr/local/lib/python3.9/dist-packages/sklearn/base.py:432: UserWarning: X has feature names, but RandomForestClassifier was fitted without feature names\n",
-            "  warnings.warn(\n",
-            "/usr/local/lib/python3.9/dist-packages/sklearn/base.py:432: UserWarning: X has feature names, but RandomForestClassifier was fitted without feature names\n",
-            "  warnings.warn(\n",
-            "/usr/local/lib/python3.9/dist-packages/sklearn/base.py:432: UserWarning: X has feature names, but RandomForestClassifier was fitted without feature names\n",
-            "  warnings.warn(\n",
-            "\u001b[34m  Stopping...\u001b[0m\n",
-            "^C\n"
-          ]
-        }
       ]
     },
     {
